mdapipkg/unpackaged/objects/Billing_Detail_2__c.object
<CustomObject>
    <fields>
        <fullName>Account_Id__c</fullName>
        <label>Account Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Number__c</fullName>
        <label>Billing Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Billing_Seq_No__c</fullName>
        <label>Billing Sequence Number</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Number__c</fullName>
        <label>Item Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Library_Id__c</fullName>
        <label>Library Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_TAX_Code__c</fullName>
        <label>Other TAX Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>S_E_Classification__c</fullName>
        <label>S&amp;E Classification</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_E_From_Date__c</fullName>
        <label>S&amp;E From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>S_E_Ot_Tx_Amt__c</fullName>
        <label>S&amp;E Other Taxable Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S_E_Other_Tax_Amt__c</fullName>
        <label>S&amp;E Other Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S_E_Package_Nme__c</fullName>
        <label>S&amp;E Package Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_E_To_Date__c</fullName>
        <label>S&amp;E To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Order__c</fullName>
        <label>Service Order</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Billing Detail 2</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Billing Detail 2  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Detail 2&apos;s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>